ex3/testdata/typechecker/error/BinopTest-err6.java
class BinopTest {
	public static void main(String[] a){
            int x;
            x = 283 - false; // TE
	}
}

